# build_gpt

./: .gitignore  UV_GUIDE.md  build_gpt.ipynb  micrograd.py  micrograd_from_scratch_yay.ipynb  micrograd_from_scratch_yay.py  neural_networks.ipynb  practice.py  pyproject.toml  requirement.txt  requirements.txt  test.py
gpt/: bigram.py  gpt.md  gpt_dev.py  v2.py
makemore/: copy_of_build_makemore_mlp.py  log_prob.py  logger.py  make_part4_backprop.md  makemore.py  makemore_mlp2.py  makemore_part1_bigrams.py  makemore_part2_mlp.py  makemore_part3_bn.ipynb  makemore_part3_bn.py  makemore_part3_bn_jojo.ipynb  makemore_part4_backprop.py  makemore_part5_cnn1.md  makemore_part5_cnn1.py  makemore_pt2.py  makemore_summary.py  multinomial.py
tokenizer/: tokenizer.ipynb  tokenizer.py
